# wonnx

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  onnxruntime.rs  wgsl
.github/: deploy_manylinux.sh  test_onnx_backend.sh
.github/workflows/: check-onnx-backend.yaml  create-py-mac.yaml  create-py-manylinux.yaml  create-py-windows.yaml  python-package.yml  rust.yml
data/: index.html
data/models/: mnist-labels.txt  opt-mnist.onnx  opt-squeeze.onnx  single_relu.onnx
examples/: bench.rs  bench_compute.rs  conv.rs  conv_compute.rs  custom_graph.rs  e2e.rs  efficient-lite4.rs  graph_test.rs  matmul.rs  matmul_compute.rs  matrix_compute.rs  maxpool.rs  mnist.rs  onnxruntime-mnist.rs  onnxruntime.rs  reader.rs  simple_graph.rs  squeeze.rs  two_transpose.rs  unit_compute.rs  vgg19.rs  yolo.rs
examples/data/models/: single_relu.onnx
py-wonnx/: Cargo.toml  pyproject.toml
py-wonnx/src/: lib.rs
py-wonnx/tests/: test_onnx_backend.py  test_wonnx.py
src/: boilerplate.rs  compiler.rs  compute(archive).rs  compute.rs  dimensions.rs  gpu.rs  ir.rs  lib.rs  onnx.rs  onnx_proto3.rs  op.rs  optimisation.rs  optimizer.rs  resource.rs  ressource.rs  sequencer.rs  shader.wgsl  utils.rs
templates/: base.wgsl  main.wgsl  struct-ArrayVector.wgsl  structs.wgsl
templates/containers/: Conv.wgsl  squeezenet_conv_group.wgsl
templates/endomorphism/: activation.wgsl  arithmetic.wgsl  batchnormalization.wgsl  copy.wgsl  map.wgsl  softmax.wgsl
templates/matrix/: concat.wgsl  gemm.wgsl  gemm_1.wgsl  matmul.wgsl  resize.wgsl  split.wgsl  transpose.wgsl
templates/pool/: aggregate.wgsl  conv.wgsl  conv_kernel_1.wgsl  conv_kernel_3.wgsl  conv_parallel.wgsl
templates/snippets/: activation_scalar.wgsl  activation_vec.wgsl
tests/: batchnormalization.rs  conv.rs  cos.rs  custom_graph.rs  globalaveragepool.rs  identity.rs  integration_test.rs  matmul.rs  matrix.rs  mnist.rs  pretrained_models.rs  relu.rs  simple_graph.rs  squeeze.rs  test_unit_operator.rs  two_transpose.rs
wonnx/: .gitignore  Cargo.toml  Makefile  index.html
wonnx-cli/: Cargo.toml  README.md
wonnx-cli/src/: cpu.rs  gpu.rs  info.rs  main.rs  text.rs  trace.rs  types.rs  util.rs  utils.rs
wonnx-cli/tests/: cli.rs
wonnx-preprocessing/: Cargo.toml
wonnx-preprocessing/src/: constant_folding.rs  image.rs  lib.rs  preparation.rs  shape_inference.rs  text.rs  utils.rs
wonnx-py/: Cargo.toml  README.md  pyproject.toml  requirements.txt
wonnx-py/src/: lib.rs
wonnx-py/tests/: test_onnx_backend.py  test_specific_op.py  test_wonnx.py
wonnx-tract/: Cargo.toml
wonnx-tract/examples/: a.rs
wonnx-wasm/: Cargo.toml  README.md  index.html  squeeze.html
wonnx-wasm/src/: lib.rs
wonnx/examples/: mnist.rs  simple_graph.rs  squeeze.rs
wonnx/examples/data/models/: opt-mnist.onnx
wonnx/src/: builder.rs  compiler.rs  einsum.rs  gpu.rs  ir.rs  lib.rs  onnx_model.rs  optimizer.rs  resource.rs  tensor.rs  utils.rs
wonnx/templates/: structs.wgsl
wonnx/templates/endomorphism/: activation.wgsl  arithmetic.wgsl  batchnormalization.wgsl  broadcast.wgsl  cast.wgsl  erf.wgsl  gather.wgsl  map.wgsl  onehot.wgsl  slice.wgsl  softmax.wgsl
wonnx/templates/matrix/: concat.wgsl  gemm.wgsl  gemm_1.wgsl  lrn.wgsl  pad.wgsl  resize.wgsl  shape.wgsl  split.wgsl  transpose.wgsl
wonnx/templates/pool/: aggregate.wgsl  conv.wgsl  conv_kernel_1.wgsl  conv_kernel_3.wgsl  reduce.wgsl
wonnx/templates/snippets/: activation_scalar.wgsl  activation_vec.wgsl
wonnx/templates/unpool/: convtranspose.wgsl
wonnx/tests/: arithmetic.rs  batchnormalization.rs  cast.rs  concat.rs  conv.rs  convtranspose.rs  cos.rs  gather.rs  globalaveragepool.rs  hard_sigmoid.rs  hardsigmoid.rs  identity.rs  localresponsenormalization.rs  matrix.rs  onehot.rs  pretrained_models.rs  reduce.rs  slice.rs  softmax.rs
wonnx/tests/common/: mod.rs
