[package]
name = "wonnx"
version = "0.2.1"
authors = ["haixuanTao <hai-xuan.tao@student.ecp.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Wonnx is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
repository = "https://github.com/haixuanTao/wonnx.git"
homepage = "https://github.com/haixuanTao/wonnx"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu= "0.11.0"
bytemuck = "1.7.2"
env_logger = "0.9.0"
pollster = "0.2.4"
log = "0.4.14" 
bytemuck_derive = "1.0.1"
protobuf = { version = "2", features = ["with-bytes"] }
tera = "1.12.1"
serde_derive = "1.0.68"
serde = "1.0.68"


[dev-dependencies]
approx = "0.5.0"
image = "0.23.14"
ndarray = "0.15.3"
ureq = "2.2.0"
ndarray-rand = "0.14.0"
# wgpu-profiler = "0.7.0"
# onnxruntime = { path = "/home/peter/Documents/CONTRIB/onnxruntime-rs/onnxruntime", features = ["cuda"]}

[workspace]
resolver = "2"

[profile.release]
debug = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"

