[package]
name = "wonnx-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"

[features]
cpu = ["tract-onnx"]
default = []

[[bin]]
name = "nnx"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
env_logger = "0.9.0"
log = "0.4.17"
ndarray = "0.15.4"
pollster = "0.2.5"
prettytable-rs = "0.8.0"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
structopt = { version = "0.3.26", features = [ "paw" ] }
thiserror = "1.0.31"
tract-onnx = { version = "0.16.7", optional = true }
wgpu = "0.13.1"
wonnx = { path = "../wonnx" }
wonnx-preprocessing = { path = "../wonnx-preprocessing" }
human_bytes = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.4"
