[package]
name = "wonnx-cli"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"
license = "MIT OR Apache-2.0"
description = "CLI for WONNX. WONNX is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
readme = "./README.md"

[features]
cpu = ["tract-onnx"]
default = []

[[bin]]
name = "nnx"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
env_logger = "0.9.0"
log = "0.4.17"
ndarray = "0.15.4"
prettytable-rs = "0.8.0"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
structopt = { version = "0.3.26", features = [ "paw" ] }
thiserror = "1.0.31"
tract-onnx = { version = "0.16.7", optional = true }
wgpu = "0.14.0"
wonnx = { version = "0.3.0" }
wonnx-preprocessing = { version = "0.3.0" }
human_bytes = "0.3.1"
pollster = "0.2.5"

[dev-dependencies]
assert_cmd = "2.0.4"
