[package]
name = "wonnx-preprocessing"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.2"
log = "0.4.17"
ndarray = "0.15.4"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
thiserror = "1.0.31"
tokenizers = "0.11.3"
tract-onnx = { version = "^0.17.0", optional = true }
wgpu = "0.13.1"
wonnx = { path = "../wonnx" }
serde_json = "^1.0"

[dev-dependencies]
env_logger = "0.9.0"
