[package]
name = "wonnx-preprocessing"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Preprocessing utility crate for WONNX. WONNX is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"
readme = "../README.md"

[dependencies]
image = "0.24.2"
log = "0.4.17"
ndarray = "0.15.4"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
thiserror = "1.0.31"
tokenizers = "0.11.3"
tract-onnx = { version = "^0.17.0", optional = true }
wgpu = "0.14.0"
wonnx = { version = "0.3.0" }
serde_json = "^1.0"
bytemuck = "1.9.1"

[dev-dependencies]
env_logger = "0.9.0"
pollster = "0.2.5"