[package]
name = "wonnx-py"
version = "0.1.1"
edition = "2018"
authors = ["haixuanTao <tao.xavier@outlook.com>", "Tommy van der Vorst <tommy@pixelspark.nl>"]
license = "MIT OR Apache-2.0"
description = "Wonnx is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wonnx = { path = "../wonnx" }
pyo3 = "0.16.4"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
pollster = "0.2.5"
env_logger = "0.9.0"

# prevents package from thinking it's in the workspace

[lib]
name = "wonnx"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
