[package]
name = "wonnx-tract"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["Dmitry Sharshakov <d3dx12.xx@gmail.com>"]
description = "An integration crate for using GPU compiler from wonnx to accelerate tract model inference"
repository = "https://github.com/snipsco/tract"
keywords = ["TensorFlow", "NeuralNetworks"]
categories = ["science"]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive-new = "0.5.9"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
educe = "0.4.18"
lazy_static = "1.4.0"
libc = "0.2.100"
log = "0.4.14"
num-traits = "0.2.14"
tract-data = "0.16.6"
tract-core = "0.16.6"
paste = "1.0.5"
scan_fmt = "0.2.6"
wgpu = "0.12"
futures = "0.3"
bytemuck = "1.9"

[build-dependencies]
cc = "1.0.69"
liquid = "0.24"
unicode-normalization = "0.1.19"
smallvec = "1.6.1"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
