[package]
name = "wonnx"
version = "0.2.4"
authors = ["haixuanTao <tao.xavier@outlook.com>", "Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Wonnx is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"
readme = "../README.md"
exclude = [
    "etc/**/*",
    ".github/**/**",
    "coverage/**/**",
    "examples/**/*", 
    "target/**/*",
    "tests/**/*",
    "Cargo.lock",
]

[dependencies]
wgpu = "0.12.0"
bytemuck = "1.9.1"
log = "0.4.16"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
tera = { version = "1.15.0", default-features = false }
lazy_static = "1.4.0"
thiserror = "1.0.30"
serde_derive = "1.0.136"
serde = { version = "1.0.136", features = ["derive"] }
num = "0.4.0"

[dev-dependencies]
image = "0.24.1"
ndarray = "0.15.4"
approx = "0.5.1"
pollster = "0.2.5"
env_logger = "0.9.0"
