[package]
name = "wonnx"
version = "0.2.6"
authors = ["haixuanTao <tao.xavier@outlook.com>", "Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Wonnx is an ONNX runtime based on wgpu aimed at being a universal GPU runtime, written in Rust."
repository = "https://github.com/webonnx/wonnx.git"
homepage = "https://github.com/webonnx/wonnx"
readme = "../README.md"
exclude = [
    "etc/**/*",
    ".github/**/**",
    "coverage/**/**",
    "examples/**/*", 
    "target/**/*",
    "tests/**/*",
    "Cargo.lock",
]

[dependencies]
wgpu = "0.13.1"
bytemuck = "1.9.1"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
log = "0.4.17"
tera = { version = "1.15.0", default-features = false }
lazy_static = "1.4.0"
thiserror = "1.0.31"
serde_derive = "1.0.137"
serde = { version = "1.0.137", features = ["derive"] }
num = "0.4.0"

# We need these on WASM because the way we are reading buffers there is slightly more involved
# See GpuTensor::read_to_vec
[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-intrusive = "0.4.0"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}

[dev-dependencies]
image = "0.24.2"
ndarray = "0.15.4"
approx = "0.5.1"
pollster = "0.2.5"
env_logger = "0.9.0"
